# src/routes.ts
@@ -27,4 +27,5 @@ export const router = new Router()
   .get("/clipboard/:id", clipboard.getById)
   .get("/clipboard/openid/:openid", clipboard.getByOpenid)
   .post("/clipboard", clipboard.saveById)
+  .get("/analysis/blogs", analysis.getBlogs)
   .get("/analysis/dashboard", analysis.getDashboardUrl);
